Fix formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -195,3 +195,10 @@ async function crearUsuario(){
         btn.disabled = false;
         btn.innerText = "Guardar en Base de Datos";
     }
+}
+
+window.addEventListener("load", cargarSheets);
+</script>
+
+</body>
+</html>
