--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <header class="header-main">
     <img src="https://drive.google.com/thumbnail?id=1bawJf9oARBLy2itsOfA9YE8RVAFNdNef" alt="Logo">
     <div style="text-align:center">
-        <h1 style="margin:0; color:var(--primary); font-size:1.5rem;">COBERTURA MASTER</h1>
+        <h1 style="margin:0; color:var(--primary); font-size:1.5rem;">COBERTURA</h1>
         <small id="loader">CONECTANDO...</small>
     </div>
     <img src="https://drive.google.com/thumbnail?id=1zh0lISfhL33lIht-Iis1TtQBEeqahnJg" alt="Soporte">
