--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </div>
 
 <script>
-    const API = "TU_URL_DE_APPS_SCRIPT_AQUI"; 
+    const API = "https://script.google.com/macros/s/AKfycbzl-VPv3NE0zn0DKZND1lS6Q8LbuSiO3-TRIqtV2ddQYjyw2Jftfnd2Q8XBBKAuu8B3/exec"; 
     let MASTER = [], USUARIOS = [], ROL = "", pag = 1;
 
     // --- LÓGICA DE BÚSQUEDA INTELIGENTE ---
