--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 </div>
 
 <script>
-    const API_URL = "URL_DE_TU_APPS_SCRIPT"; 
+    const API_URL = "https://script.google.com/macros/s/AKfycbwkQ4J8EzuhtKzCHHi-BjHAUCc-S2SenPJdscB-Fvw1FuR-cP-K_2rVdImqK2cuqXbi6g/exec"; 
     let DATA = { cob: [], logs: [], users: [], online: [], tokens: {} };
     let SES = { u: "", r: "", tk: "" };
     let pag = 1;
