--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 <script>
 // ================== PEGAR URL DEL APPS SCRIPT AQUÍ ==================
-const API_URL = "https://script.google.com/macros/s/AKfycbz..."; 
+const API_URL = "https://script.google.com/macros/s/AKfycbwA3pVRK7QzEj4a9cr6olwgmAeKnbB8XttRngmTg8cqgO6AWeK5dSwAD5C9J72nPVwQ5w/exec"; 
 // ====================================================================
 
 let DB = { cob: [], users: [], history: [], online: [] };
